syntax = "proto3";

package config;

message Configuration {
  repeated EbpfEntry entries = 1;
}

message EbpfEntry {
  string hr_name = 1;         // Human-readable name
  string description = 2;     // Human-readable description
  string ebpf_name = 3;       // Name of the eBPF function to be loaded
  uint64 fn_id = 4;           // Optional ID of the function interpreting the eBPF map
}